# RETH6

./: .clang-format  .gitignore  README
data/: functions.json
misc/ZERO318/: NewEoSDECL.cpp  util.h
misc/decompiled/: data.json  th06e.c  th06e.h  th06e.hex-ray.c  th06e.old.c  th06e.old.h  th06e2.hex-ray.cpp
scripts/: util.py
src/: CMakeLists.txt  Config.cpp  DLL-Helper.cpp  Reth6-DLL.cpp  Reth6-Injector.cpp
src/include/: Config.hpp  DLL-Helper.hpp  Reth6-Injetor.hpp
